# Avatar_EDU

./: .env.example  .gitignore  CLAUDE.md  DEMO_CONVERSATION_TEMPLATE.md  MEMORY_BOARD_DEMO_GUIDE.md  MEMORY_BUG_FIX.md  README.md  add_chatbot_fields_to_reading_insight.py  add_chatbot_table.py  add_materials.py  add_pronunciation_to_conversation.py  create_demo_memory.py  create_demo_user.py  language_arts.db  pyproject.toml  quick_writing_test.html  run.py  run.sh  setup.py  setup_db.py  setup_memory_tables.py  start.sh  test_login_flow.html  test_writing.html  test_writing_gpt.html  update_writing_memory_insight.py
InteractiveAvatarNextJSDemo/: .env.example  README.md  package-lock.json  package.json
InteractiveAvatarNextJSDemo/app/: layout.tsx  page.tsx
InteractiveAvatarNextJSDemo/components/: AudioRecorder.tsx  ConversationTopics.tsx  Icons.tsx  InteractiveAvatar.tsx  NavBar.tsx  ReportCard.tsx  TeacherModeToggle.tsx  VoiceChatSelector.tsx
app/: __init__.py
app/api/: azure_speech_client.py  heygen_client.py  ocr_client.py  openai_client.py  wordsapi_client.py
app/models/: __init__.py  content.py  memory.py  progress.py  reading.py  session.py  speaking.py  user.py
app/routes/: auth.py  conversation.py  listening.py  main.py  memory.py  reading.py  (+2 more)
config/: __init__.py
instance/: language_arts.db
samples/: paragraph_samples.json  sentence_samples.json  word_samples.json
templates/: content_manager.html  conversation.html  index.html  listening.html  login.html  reading.html  speaking.html  speaking_backup.html  writing.html  writing_backup.html
(+86 files in other folders)
